objects/Producer_Association_For_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Account_Parent__c</fullName>
        <description>parent account</description>
        <formula>Producer_Consultant__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <description>record type of account</description>
        <formula>Producer_Consultant__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>account type</description>
        <formula>TEXT(Producer_Consultant__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Source__c</fullName>
        <description>This will be used during migrations to identify the source</description>
        <label>Migration Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>used to identify the master opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Producer Association For Opportunity</relationshipLabel>
        <relationshipName>Producer_Association_For_Opportunity</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Producer_Consultant__c</fullName>
        <description>Will determine the producer or consultant associated to the opportunity</description>
        <label>Producer / Consultant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Producer Association For Opportunity</relationshipLabel>
        <relationshipName>Producer_Association_For_Opportunity</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Producer Association For Opportunity</label>
    <nameField>
        <displayFormat>POA-{0000}</displayFormat>
        <label>Producer Opportunity Association #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Producer Association For Opportunity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>